--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -34,7 +34,7 @@ $cyan:    #0dcaf0 !default;
 // --- Bootstrap Theme Colors --- //
 //
 $primary:         #ffd600 !default;
-$secondary:       #df5174 !default;
+$secondary:       #0c1427 !default;
 $success:         #20c997 !default;
 $info:            #71c9ff !default;
 $warning:         #dc4e41 !default;
