--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -1,7 +1,7 @@
 <article class="card animate__animated animate__fadeInLeft animate__slow">
   <section class="row">
     <section class="col-md-5 pe-md-0">
-      <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="d-flex justify-content-center align-items-center h-100 bg-opacity-25 bg-primary">
         <img src="/assets/images/others/register.png" alt="Register" class="d-none d-md-block w-100 h-auto"/>
       </div>
     </section>
