--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,13 +1,14 @@
+@import './variables';
 // Write your custom css/scss here
 .form-control.ng-touched.ng-invalid {
-    border: 1.5px solid #dc3545;
+    border: 1.5px solid $danger;
 }
 .invalid-input-message {
-    color: #dc3545;
+    color: $danger;
 }
 
 .ng-select.ng-invalid.ng-touched {
-    border: 1.5px solid #dc3545;
+    border: 1.5px solid $danger;
     border-radius: 0.25rem;
 }
 .form-group {
@@ -39,10 +40,32 @@
 }
 app-sidebar-menu{
   a {
-    color: #000 !important;
+    color: $dark !important;
   }
 }
 
 text {
-  fill: #000 !important;
+  fill: $dark !important;
+}
+
+.owl-prev, .owl-next {
+ background-color: $secondary !important;
+}
+
+.icon-leal {
+  &::before {
+    content: url(../assets/icons/coins-icon.svg);
+    margin-right: 5px;
+    width: 16px;
+    position: relative;
+  }
+}
+.icon-leal-black {
+    &::before {
+      content: url(../assets/icons/coins-icon-black.svg);
+      margin-right: 5px;
+      width: 16px;
+      font-size: 10px;
+      position: relative;
+    }
 }
