feat: mostrar datos del usuario

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -5,6 +5,7 @@
   <div class="navbar-content">
     <app-search-bar></app-search-bar>
     <ul class="navbar-nav">
+      <app-points class="items-navbar"></app-points>
       <app-nav-profile class="items-navbar"></app-nav-profile>
     </ul>
   </div>
