--- a/src/app/layout/navbar/components/nav-profile/nav-profile.component.html
+++ b/src/app/layout/navbar/components/nav-profile/nav-profile.component.html
@@ -1,23 +1,23 @@
 <li class="nav-item nav-profile" ngbDropdown>
     <a class="nav-link" ngbDropdownToggle id="profileDropdown">
-      <img class="wd-30 ht-30 rounded-circle" [src]="infoUser.imgProfile" alt="profile">
+      <img class="wd-30 ht-30 rounded-circle" src="assets/images/profiles/perfil.png" alt="profile">
     </a>
     <div ngbDropdownMenu class="px-0" aria-labelledby="profileDropdown">
       <div class="d-flex flex-column align-items-center border-bottom px-5 py-3">
         <div class="mb-3">
-          <img class="wd-80 ht-80 rounded-circle" [src]="infoUser.imgProfile" alt="">
+          <img class="wd-80 ht-80 rounded-circle" src="assets/images/profiles/perfil.png" alt="">
         </div>
         <div class="text-center">
-          <p class="tx-16 fw-bolder">{{infoUser.name}}</p>
-          <p class="tx-12 text-muted">{{infoUser.email}}</p>
+          <p class="tx-16 fw-bolder">{{(data$ | async)?.fullName}}</p>
+          <p class="tx-12 text-muted">{{(data$ | async)?.email}}</p>
         </div>
       </div>
       <ul class="list-unstyled p-1">
 
-        <li class="dropdown-item py-2">
-          <a href="" class="d-flex text-body ms-0">
+        <li class="dropdown-item py-2" (click)="signOut()">
+          <a class="d-flex text-body ms-0">
             <i class="feather icon-log-out me-2 icon-md"></i>
-            <span>Log out</span>
+            <span>Salir</span>
           </a>
         </li>
       </ul>
