--- a/src/app/views/app/products/components/product/product.component.html
+++ b/src/app/views/app/products/components/product/product.component.html
@@ -8,7 +8,7 @@
     <h2 class="h4 text-center">{{data.title}}</h2>
     <div class="d-grid gap-2 mt-3">
       <button class="btn btn-primary fw-bold icon-leal-black">Ganar coins </button>
-      <button class="btn btn-outline-secondary fw-bold icon-leal">Redimir <span class="">{{point}}</span></button>
+      <button class="btn btn-outline-secondary fw-bold icon-leal">Redimir <span class="">{{point | currency}}</span></button>
     </div>
   </div>
 
