--- a/src/app/layout/navbar/components/points/points.component.html
+++ b/src/app/layout/navbar/components/points/points.component.html
@@ -1,3 +1,3 @@
 <li class="nav-item">
-  <h5 class="text-dark fw-bold"><i class="icon-leal"></i>Coins: <span class="h4 fw-bold text-primary bg-dark badge ">{{(data$ | async)?.points| currency : 'USD' : 'symbol' : '1.0-0'}}</span> </h5>
+  <h5 class="fw-bold"><i class="icon-leal"></i>Coins: <span class="h4 fw-bold text-primary bg-dark badge ">{{(data$ | async)?.points| currency : 'USD' : 'symbol' : '1.0-0'}}</span> </h5>
 </li>
