--- a/src/app/views/app/home/home.component.html
+++ b/src/app/views/app/home/home.component.html
@@ -3,17 +3,12 @@
     <div class="card-body">
       <section class="row justify-content-md-center">
         <div class="col-md-8">
-
-        </div>
-      </section>
-      <section class="row justify-content-md-center">
-        <div class="col-md-8">
           <owl-carousel-o [options]="bannerPublicidad">
             <ng-template carouselSlide *ngFor="let slide of slidesStore" [id]="slide.id" class="position-relative">
               <img [src]="slide.src" [alt]="slide.alt" [title]="slide.title">
-              <h1 class="title-banner">{{slide.title}}</h1>
-              <h5 class="subtitle-banner">{{slide.subtitle}}</h5>
-              <a class="btn btn-secondary btn-banner btn-lg" [href]="slide.url">{{slide.btnText | titlecase}}</a>
+              <h1 class="title-banner text-dark">{{slide.title}}</h1>
+              <h5 class="subtitle-banner text-dark">{{slide.subtitle}}</h5>
+              <a class="btn btn-dark btn-banner btn-lg" [href]="slide.url">{{slide.btnText | titlecase}}</a>
             </ng-template>
           </owl-carousel-o>
         </div>
