--- a/src/app/views/app/products/components/list-product/list-product.component.html
+++ b/src/app/views/app/products/components/list-product/list-product.component.html
@@ -1,14 +1,14 @@
 <section class="row mt-5">
-  <div class="col-md-12 bg-category">
-    <h3 class="text-dark fw-bold ">Usa tus Leal Coins en <small class="float-end text-danger cursor-pointer" *ngIf="filter" routerLink="./">Eliminar filtro </small></h3>
-    <h5 class="text-dark fw-light">Utiliza tus Leal Coins como efectivo en todas tus marcas favoritas Leal</h5>
+  <div class="col-md-12 bg-category" [ngStyle]="{'background-image':themeDark?'':'url(/assets/images/backgrounds/background-auth.jpg)'}">
+    <h3 class="fw-bold">Usa tus Leal Coins en <small class="float-end text-danger cursor-pointer" *ngIf="filter" routerLink="./">Eliminar filtro </small></h3>
+    <h5 class="fw-light">Utiliza tus Leal Coins como efectivo en todas tus marcas favoritas Leal</h5>
     <hr>
     <owl-carousel-o [options]="CategoryCarousel">
       <ng-template carouselSlide *ngFor="let category of categories">
         <article class="card bg-primary cursor-pointer" routerLink="./" [queryParams]="{category:category.value}">
           <div class="card-body">
             <img [src]="category.icon" alt="" class="d-block ">
-            <h5 class="text-center fw-bold">{{category.title}}</h5>
+            <h5 class="text-center text-dark fw-bold">{{category.title}}</h5>
           </div>
         </article>
       </ng-template>
